// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Order by 🟥 order 1`] = `
{
  "errors": [
    [JQLSyntaxError: mismatched input '<EOF>' expecting BY],
  ],
  "query": {
    "accept": [Function],
    "appendClause": [Function],
    "enterNode": [Function],
    "exitNode": [Function],
    "getChildren": [Function],
    "orderBy": undefined,
    "parent": null,
    "position": [
      0,
      5,
    ],
    "prependOrderField": [Function],
    "removeClause": [Function],
    "removeOrderBy": [Function],
    "replaceClause": [Function],
    "replaceOrderBy": [Function],
    "setOrderDirection": [Function],
    "type": "query",
    "where": undefined,
  },
  "represents": "order",
}
`;

exports[`Order by 🟥 order by 1`] = `
{
  "errors": [
    [JQLSyntaxError: mismatched input '<EOF>' expecting {POSNUMBER, NEGNUMBER, CUSTOMFIELD, STRING, QUOTE_STRING, SQUOTE_STRING}],
  ],
  "query": {
    "accept": [Function],
    "appendClause": [Function],
    "enterNode": [Function],
    "exitNode": [Function],
    "getChildren": [Function],
    "orderBy": {
      "accept": [Function],
      "enterNode": [Function],
      "exitNode": [Function],
      "fields": [],
      "getChildren": [Function],
      "operator": {
        "accept": [Function],
        "enterNode": [Function],
        "exitNode": [Function],
        "getChildren": [Function],
        "parent": [Circular],
        "position": [
          0,
          8,
        ],
        "value": "ORDER BY",
      },
      "parent": [Circular],
      "position": [
        0,
        8,
      ],
      "prependOrderField": [Function],
      "remove": [Function],
      "removeOrderField": [Function],
      "replace": [Function],
      "replaceOrderField": [Function],
      "setOrderDirection": [Function],
      "type": "order_by",
    },
    "parent": null,
    "position": [
      0,
      8,
    ],
    "prependOrderField": [Function],
    "removeClause": [Function],
    "removeOrderBy": [Function],
    "replaceClause": [Function],
    "replaceOrderBy": [Function],
    "setOrderDirection": [Function],
    "type": "query",
    "where": undefined,
  },
  "represents": "order by",
}
`;

exports[`Order by 🟥 order by asc 1`] = `
{
  "errors": [
    [JQLSyntaxError: mismatched input 'asc' expecting {POSNUMBER, NEGNUMBER, CUSTOMFIELD, STRING, QUOTE_STRING, SQUOTE_STRING}],
  ],
  "query": {
    "accept": [Function],
    "appendClause": [Function],
    "enterNode": [Function],
    "exitNode": [Function],
    "getChildren": [Function],
    "orderBy": {
      "accept": [Function],
      "enterNode": [Function],
      "exitNode": [Function],
      "fields": [],
      "getChildren": [Function],
      "operator": {
        "accept": [Function],
        "enterNode": [Function],
        "exitNode": [Function],
        "getChildren": [Function],
        "parent": [Circular],
        "position": [
          0,
          8,
        ],
        "value": "ORDER BY",
      },
      "parent": [Circular],
      "position": [
        0,
        12,
      ],
      "prependOrderField": [Function],
      "remove": [Function],
      "removeOrderField": [Function],
      "replace": [Function],
      "replaceOrderField": [Function],
      "setOrderDirection": [Function],
      "type": "order_by",
    },
    "parent": null,
    "position": [
      0,
      12,
    ],
    "prependOrderField": [Function],
    "removeClause": [Function],
    "removeOrderBy": [Function],
    "replaceClause": [Function],
    "replaceOrderBy": [Function],
    "setOrderDirection": [Function],
    "type": "query",
    "where": undefined,
  },
  "represents": "order by asc",
}
`;

exports[`Order by 🟥 order by by 1`] = `
{
  "errors": [
    [JQLSyntaxError: mismatched input 'by' expecting {POSNUMBER, NEGNUMBER, CUSTOMFIELD, STRING, QUOTE_STRING, SQUOTE_STRING}],
  ],
  "query": {
    "accept": [Function],
    "appendClause": [Function],
    "enterNode": [Function],
    "exitNode": [Function],
    "getChildren": [Function],
    "orderBy": {
      "accept": [Function],
      "enterNode": [Function],
      "exitNode": [Function],
      "fields": [],
      "getChildren": [Function],
      "operator": {
        "accept": [Function],
        "enterNode": [Function],
        "exitNode": [Function],
        "getChildren": [Function],
        "parent": [Circular],
        "position": [
          0,
          8,
        ],
        "value": "ORDER BY",
      },
      "parent": [Circular],
      "position": [
        0,
        11,
      ],
      "prependOrderField": [Function],
      "remove": [Function],
      "removeOrderField": [Function],
      "replace": [Function],
      "replaceOrderField": [Function],
      "setOrderDirection": [Function],
      "type": "order_by",
    },
    "parent": null,
    "position": [
      0,
      11,
    ],
    "prependOrderField": [Function],
    "removeClause": [Function],
    "removeOrderBy": [Function],
    "replaceClause": [Function],
    "replaceOrderBy": [Function],
    "setOrderDirection": [Function],
    "type": "query",
    "where": undefined,
  },
  "represents": "order by by",
}
`;

exports[`Order by 🟥 order by desc 1`] = `
{
  "errors": [
    [JQLSyntaxError: mismatched input 'desc' expecting {POSNUMBER, NEGNUMBER, CUSTOMFIELD, STRING, QUOTE_STRING, SQUOTE_STRING}],
  ],
  "query": {
    "accept": [Function],
    "appendClause": [Function],
    "enterNode": [Function],
    "exitNode": [Function],
    "getChildren": [Function],
    "orderBy": {
      "accept": [Function],
      "enterNode": [Function],
      "exitNode": [Function],
      "fields": [],
      "getChildren": [Function],
      "operator": {
        "accept": [Function],
        "enterNode": [Function],
        "exitNode": [Function],
        "getChildren": [Function],
        "parent": [Circular],
        "position": [
          0,
          8,
        ],
        "value": "ORDER BY",
      },
      "parent": [Circular],
      "position": [
        0,
        13,
      ],
      "prependOrderField": [Function],
      "remove": [Function],
      "removeOrderField": [Function],
      "replace": [Function],
      "replaceOrderField": [Function],
      "setOrderDirection": [Function],
      "type": "order_by",
    },
    "parent": null,
    "position": [
      0,
      13,
    ],
    "prependOrderField": [Function],
    "removeClause": [Function],
    "removeOrderBy": [Function],
    "replaceClause": [Function],
    "replaceOrderBy": [Function],
    "setOrderDirection": [Function],
    "type": "query",
    "where": undefined,
  },
  "represents": "order by desc",
}
`;

exports[`Order by 🟥 order by issuetype asc desc 1`] = `
{
  "errors": [
    [JQLSyntaxError: extraneous input 'desc' expecting <EOF>],
  ],
  "query": {
    "accept": [Function],
    "appendClause": [Function],
    "enterNode": [Function],
    "exitNode": [Function],
    "getChildren": [Function],
    "orderBy": {
      "accept": [Function],
      "enterNode": [Function],
      "exitNode": [Function],
      "fields": [
        {
          "accept": [Function],
          "direction": {
            "accept": [Function],
            "enterNode": [Function],
            "exitNode": [Function],
            "getChildren": [Function],
            "parent": [Circular],
            "position": [
              19,
              22,
            ],
            "value": "ASC",
          },
          "enterNode": [Function],
          "exitNode": [Function],
          "field": {
            "accept": [Function],
            "enterNode": [Function],
            "exitNode": [Function],
            "getChildren": [Function],
            "parent": [Circular],
            "position": [
              9,
              18,
            ],
            "properties": [],
            "text": "issuetype",
            "value": "issuetype",
          },
          "getChildren": [Function],
          "parent": [Circular],
          "position": [
            9,
            22,
          ],
          "remove": [Function],
          "replace": [Function],
          "setOrderDirection": [Function],
        },
      ],
      "getChildren": [Function],
      "operator": {
        "accept": [Function],
        "enterNode": [Function],
        "exitNode": [Function],
        "getChildren": [Function],
        "parent": [Circular],
        "position": [
          0,
          8,
        ],
        "value": "ORDER BY",
      },
      "parent": [Circular],
      "position": [
        0,
        22,
      ],
      "prependOrderField": [Function],
      "remove": [Function],
      "removeOrderField": [Function],
      "replace": [Function],
      "replaceOrderField": [Function],
      "setOrderDirection": [Function],
      "type": "order_by",
    },
    "parent": null,
    "position": [
      0,
      27,
    ],
    "prependOrderField": [Function],
    "removeClause": [Function],
    "removeOrderBy": [Function],
    "replaceClause": [Function],
    "replaceOrderBy": [Function],
    "setOrderDirection": [Function],
    "type": "query",
    "where": undefined,
  },
  "represents": "order by issuetype asc desc",
}
`;

exports[`Order by 🟥 order by issuetype asc, 1`] = `
{
  "errors": [
    [JQLSyntaxError: mismatched input '<EOF>' expecting {POSNUMBER, NEGNUMBER, CUSTOMFIELD, STRING, QUOTE_STRING, SQUOTE_STRING}],
  ],
  "query": {
    "accept": [Function],
    "appendClause": [Function],
    "enterNode": [Function],
    "exitNode": [Function],
    "getChildren": [Function],
    "orderBy": {
      "accept": [Function],
      "enterNode": [Function],
      "exitNode": [Function],
      "fields": [
        {
          "accept": [Function],
          "direction": {
            "accept": [Function],
            "enterNode": [Function],
            "exitNode": [Function],
            "getChildren": [Function],
            "parent": [Circular],
            "position": [
              19,
              22,
            ],
            "value": "ASC",
          },
          "enterNode": [Function],
          "exitNode": [Function],
          "field": {
            "accept": [Function],
            "enterNode": [Function],
            "exitNode": [Function],
            "getChildren": [Function],
            "parent": [Circular],
            "position": [
              9,
              18,
            ],
            "properties": [],
            "text": "issuetype",
            "value": "issuetype",
          },
          "getChildren": [Function],
          "parent": [Circular],
          "position": [
            9,
            22,
          ],
          "remove": [Function],
          "replace": [Function],
          "setOrderDirection": [Function],
        },
      ],
      "getChildren": [Function],
      "operator": {
        "accept": [Function],
        "enterNode": [Function],
        "exitNode": [Function],
        "getChildren": [Function],
        "parent": [Circular],
        "position": [
          0,
          8,
        ],
        "value": "ORDER BY",
      },
      "parent": [Circular],
      "position": [
        0,
        23,
      ],
      "prependOrderField": [Function],
      "remove": [Function],
      "removeOrderField": [Function],
      "replace": [Function],
      "replaceOrderField": [Function],
      "setOrderDirection": [Function],
      "type": "order_by",
    },
    "parent": null,
    "position": [
      0,
      23,
    ],
    "prependOrderField": [Function],
    "removeClause": [Function],
    "removeOrderBy": [Function],
    "replaceClause": [Function],
    "replaceOrderBy": [Function],
    "setOrderDirection": [Function],
    "type": "query",
    "where": undefined,
  },
  "represents": "order by issuetype asc,",
}
`;

exports[`Order by 🟥 order by issuetype, 1`] = `
{
  "errors": [
    [JQLSyntaxError: mismatched input '<EOF>' expecting {POSNUMBER, NEGNUMBER, CUSTOMFIELD, STRING, QUOTE_STRING, SQUOTE_STRING}],
  ],
  "query": {
    "accept": [Function],
    "appendClause": [Function],
    "enterNode": [Function],
    "exitNode": [Function],
    "getChildren": [Function],
    "orderBy": {
      "accept": [Function],
      "enterNode": [Function],
      "exitNode": [Function],
      "fields": [
        {
          "accept": [Function],
          "direction": undefined,
          "enterNode": [Function],
          "exitNode": [Function],
          "field": {
            "accept": [Function],
            "enterNode": [Function],
            "exitNode": [Function],
            "getChildren": [Function],
            "parent": [Circular],
            "position": [
              9,
              18,
            ],
            "properties": [],
            "text": "issuetype",
            "value": "issuetype",
          },
          "getChildren": [Function],
          "parent": [Circular],
          "position": [
            9,
            18,
          ],
          "remove": [Function],
          "replace": [Function],
          "setOrderDirection": [Function],
        },
      ],
      "getChildren": [Function],
      "operator": {
        "accept": [Function],
        "enterNode": [Function],
        "exitNode": [Function],
        "getChildren": [Function],
        "parent": [Circular],
        "position": [
          0,
          8,
        ],
        "value": "ORDER BY",
      },
      "parent": [Circular],
      "position": [
        0,
        19,
      ],
      "prependOrderField": [Function],
      "remove": [Function],
      "removeOrderField": [Function],
      "replace": [Function],
      "replaceOrderField": [Function],
      "setOrderDirection": [Function],
      "type": "order_by",
    },
    "parent": null,
    "position": [
      0,
      19,
    ],
    "prependOrderField": [Function],
    "removeClause": [Function],
    "removeOrderBy": [Function],
    "replaceClause": [Function],
    "replaceOrderBy": [Function],
    "setOrderDirection": [Function],
    "type": "query",
    "where": undefined,
  },
  "represents": "order by issuetype,",
}
`;

exports[`Order by 🟥 order by order 1`] = `
{
  "errors": [
    [JQLSyntaxError: mismatched input 'order' expecting {POSNUMBER, NEGNUMBER, CUSTOMFIELD, STRING, QUOTE_STRING, SQUOTE_STRING}],
  ],
  "query": {
    "accept": [Function],
    "appendClause": [Function],
    "enterNode": [Function],
    "exitNode": [Function],
    "getChildren": [Function],
    "orderBy": {
      "accept": [Function],
      "enterNode": [Function],
      "exitNode": [Function],
      "fields": [],
      "getChildren": [Function],
      "operator": {
        "accept": [Function],
        "enterNode": [Function],
        "exitNode": [Function],
        "getChildren": [Function],
        "parent": [Circular],
        "position": [
          0,
          8,
        ],
        "value": "ORDER BY",
      },
      "parent": [Circular],
      "position": [
        0,
        14,
      ],
      "prependOrderField": [Function],
      "remove": [Function],
      "removeOrderField": [Function],
      "replace": [Function],
      "replaceOrderField": [Function],
      "setOrderDirection": [Function],
      "type": "order_by",
    },
    "parent": null,
    "position": [
      0,
      14,
    ],
    "prependOrderField": [Function],
    "removeClause": [Function],
    "removeOrderBy": [Function],
    "replaceClause": [Function],
    "replaceOrderBy": [Function],
    "setOrderDirection": [Function],
    "type": "query",
    "where": undefined,
  },
  "represents": "order by order",
}
`;

exports[`Order by 🟥 order issuetype 1`] = `
{
  "errors": [
    [JQLSyntaxError: missing BY at 'issuetype'],
  ],
  "query": {
    "accept": [Function],
    "appendClause": [Function],
    "enterNode": [Function],
    "exitNode": [Function],
    "getChildren": [Function],
    "orderBy": {
      "accept": [Function],
      "enterNode": [Function],
      "exitNode": [Function],
      "fields": [
        {
          "accept": [Function],
          "direction": undefined,
          "enterNode": [Function],
          "exitNode": [Function],
          "field": {
            "accept": [Function],
            "enterNode": [Function],
            "exitNode": [Function],
            "getChildren": [Function],
            "parent": [Circular],
            "position": [
              6,
              15,
            ],
            "properties": [],
            "text": "issuetype",
            "value": "issuetype",
          },
          "getChildren": [Function],
          "parent": [Circular],
          "position": [
            6,
            15,
          ],
          "remove": [Function],
          "replace": [Function],
          "setOrderDirection": [Function],
        },
      ],
      "getChildren": [Function],
      "operator": {
        "accept": [Function],
        "enterNode": [Function],
        "exitNode": [Function],
        "getChildren": [Function],
        "parent": [Circular],
        "position": [
          0,
          0,
        ],
        "value": "ORDER BY",
      },
      "parent": [Circular],
      "position": [
        0,
        15,
      ],
      "prependOrderField": [Function],
      "remove": [Function],
      "removeOrderField": [Function],
      "replace": [Function],
      "replaceOrderField": [Function],
      "setOrderDirection": [Function],
      "type": "order_by",
    },
    "parent": null,
    "position": [
      0,
      15,
    ],
    "prependOrderField": [Function],
    "removeClause": [Function],
    "removeOrderBy": [Function],
    "replaceClause": [Function],
    "replaceOrderBy": [Function],
    "setOrderDirection": [Function],
    "type": "query",
    "where": undefined,
  },
  "represents": "order issuetype",
}
`;

exports[`Order by 🟩 order by "field with \\"escaped characters\\"" asc 1`] = `
{
  "errors": [],
  "query": {
    "accept": [Function],
    "appendClause": [Function],
    "enterNode": [Function],
    "exitNode": [Function],
    "getChildren": [Function],
    "orderBy": {
      "accept": [Function],
      "enterNode": [Function],
      "exitNode": [Function],
      "fields": [
        {
          "accept": [Function],
          "direction": {
            "accept": [Function],
            "enterNode": [Function],
            "exitNode": [Function],
            "getChildren": [Function],
            "parent": [Circular],
            "position": [
              45,
              48,
            ],
            "value": "ASC",
          },
          "enterNode": [Function],
          "exitNode": [Function],
          "field": {
            "accept": [Function],
            "enterNode": [Function],
            "exitNode": [Function],
            "getChildren": [Function],
            "parent": [Circular],
            "position": [
              9,
              44,
            ],
            "properties": [],
            "text": ""field with \\"escaped characters\\""",
            "value": "field with "escaped characters"",
          },
          "getChildren": [Function],
          "parent": [Circular],
          "position": [
            9,
            48,
          ],
          "remove": [Function],
          "replace": [Function],
          "setOrderDirection": [Function],
        },
      ],
      "getChildren": [Function],
      "operator": {
        "accept": [Function],
        "enterNode": [Function],
        "exitNode": [Function],
        "getChildren": [Function],
        "parent": [Circular],
        "position": [
          0,
          8,
        ],
        "value": "ORDER BY",
      },
      "parent": [Circular],
      "position": [
        0,
        48,
      ],
      "prependOrderField": [Function],
      "remove": [Function],
      "removeOrderField": [Function],
      "replace": [Function],
      "replaceOrderField": [Function],
      "setOrderDirection": [Function],
      "type": "order_by",
    },
    "parent": null,
    "position": [
      0,
      48,
    ],
    "prependOrderField": [Function],
    "removeClause": [Function],
    "removeOrderBy": [Function],
    "replaceClause": [Function],
    "replaceOrderBy": [Function],
    "setOrderDirection": [Function],
    "type": "query",
    "where": undefined,
  },
  "represents": "order by "field with \\"escaped characters\\"" asc",
}
`;

exports[`Order by 🟩 order by "field with spaces" asc 1`] = `
{
  "errors": [],
  "query": {
    "accept": [Function],
    "appendClause": [Function],
    "enterNode": [Function],
    "exitNode": [Function],
    "getChildren": [Function],
    "orderBy": {
      "accept": [Function],
      "enterNode": [Function],
      "exitNode": [Function],
      "fields": [
        {
          "accept": [Function],
          "direction": {
            "accept": [Function],
            "enterNode": [Function],
            "exitNode": [Function],
            "getChildren": [Function],
            "parent": [Circular],
            "position": [
              29,
              32,
            ],
            "value": "ASC",
          },
          "enterNode": [Function],
          "exitNode": [Function],
          "field": {
            "accept": [Function],
            "enterNode": [Function],
            "exitNode": [Function],
            "getChildren": [Function],
            "parent": [Circular],
            "position": [
              9,
              28,
            ],
            "properties": [],
            "text": ""field with spaces"",
            "value": "field with spaces",
          },
          "getChildren": [Function],
          "parent": [Circular],
          "position": [
            9,
            32,
          ],
          "remove": [Function],
          "replace": [Function],
          "setOrderDirection": [Function],
        },
      ],
      "getChildren": [Function],
      "operator": {
        "accept": [Function],
        "enterNode": [Function],
        "exitNode": [Function],
        "getChildren": [Function],
        "parent": [Circular],
        "position": [
          0,
          8,
        ],
        "value": "ORDER BY",
      },
      "parent": [Circular],
      "position": [
        0,
        32,
      ],
      "prependOrderField": [Function],
      "remove": [Function],
      "removeOrderField": [Function],
      "replace": [Function],
      "replaceOrderField": [Function],
      "setOrderDirection": [Function],
      "type": "order_by",
    },
    "parent": null,
    "position": [
      0,
      32,
    ],
    "prependOrderField": [Function],
    "removeClause": [Function],
    "removeOrderBy": [Function],
    "replaceClause": [Function],
    "replaceOrderBy": [Function],
    "setOrderDirection": [Function],
    "type": "query",
    "where": undefined,
  },
  "represents": "order by "field with spaces" asc",
}
`;

exports[`Order by 🟩 order by issuetype 1`] = `
{
  "errors": [],
  "query": {
    "accept": [Function],
    "appendClause": [Function],
    "enterNode": [Function],
    "exitNode": [Function],
    "getChildren": [Function],
    "orderBy": {
      "accept": [Function],
      "enterNode": [Function],
      "exitNode": [Function],
      "fields": [
        {
          "accept": [Function],
          "direction": undefined,
          "enterNode": [Function],
          "exitNode": [Function],
          "field": {
            "accept": [Function],
            "enterNode": [Function],
            "exitNode": [Function],
            "getChildren": [Function],
            "parent": [Circular],
            "position": [
              9,
              18,
            ],
            "properties": [],
            "text": "issuetype",
            "value": "issuetype",
          },
          "getChildren": [Function],
          "parent": [Circular],
          "position": [
            9,
            18,
          ],
          "remove": [Function],
          "replace": [Function],
          "setOrderDirection": [Function],
        },
      ],
      "getChildren": [Function],
      "operator": {
        "accept": [Function],
        "enterNode": [Function],
        "exitNode": [Function],
        "getChildren": [Function],
        "parent": [Circular],
        "position": [
          0,
          8,
        ],
        "value": "ORDER BY",
      },
      "parent": [Circular],
      "position": [
        0,
        18,
      ],
      "prependOrderField": [Function],
      "remove": [Function],
      "removeOrderField": [Function],
      "replace": [Function],
      "replaceOrderField": [Function],
      "setOrderDirection": [Function],
      "type": "order_by",
    },
    "parent": null,
    "position": [
      0,
      18,
    ],
    "prependOrderField": [Function],
    "removeClause": [Function],
    "removeOrderBy": [Function],
    "replaceClause": [Function],
    "replaceOrderBy": [Function],
    "setOrderDirection": [Function],
    "type": "query",
    "where": undefined,
  },
  "represents": "order by issuetype",
}
`;

exports[`Order by 🟩 order by issuetype asc 1`] = `
{
  "errors": [],
  "query": {
    "accept": [Function],
    "appendClause": [Function],
    "enterNode": [Function],
    "exitNode": [Function],
    "getChildren": [Function],
    "orderBy": {
      "accept": [Function],
      "enterNode": [Function],
      "exitNode": [Function],
      "fields": [
        {
          "accept": [Function],
          "direction": {
            "accept": [Function],
            "enterNode": [Function],
            "exitNode": [Function],
            "getChildren": [Function],
            "parent": [Circular],
            "position": [
              19,
              22,
            ],
            "value": "ASC",
          },
          "enterNode": [Function],
          "exitNode": [Function],
          "field": {
            "accept": [Function],
            "enterNode": [Function],
            "exitNode": [Function],
            "getChildren": [Function],
            "parent": [Circular],
            "position": [
              9,
              18,
            ],
            "properties": [],
            "text": "issuetype",
            "value": "issuetype",
          },
          "getChildren": [Function],
          "parent": [Circular],
          "position": [
            9,
            22,
          ],
          "remove": [Function],
          "replace": [Function],
          "setOrderDirection": [Function],
        },
      ],
      "getChildren": [Function],
      "operator": {
        "accept": [Function],
        "enterNode": [Function],
        "exitNode": [Function],
        "getChildren": [Function],
        "parent": [Circular],
        "position": [
          0,
          8,
        ],
        "value": "ORDER BY",
      },
      "parent": [Circular],
      "position": [
        0,
        22,
      ],
      "prependOrderField": [Function],
      "remove": [Function],
      "removeOrderField": [Function],
      "replace": [Function],
      "replaceOrderField": [Function],
      "setOrderDirection": [Function],
      "type": "order_by",
    },
    "parent": null,
    "position": [
      0,
      22,
    ],
    "prependOrderField": [Function],
    "removeClause": [Function],
    "removeOrderBy": [Function],
    "replaceClause": [Function],
    "replaceOrderBy": [Function],
    "setOrderDirection": [Function],
    "type": "query",
    "where": undefined,
  },
  "represents": "order by issuetype asc",
}
`;

exports[`Order by 🟩 order by issuetype asc, another desc 1`] = `
{
  "errors": [],
  "query": {
    "accept": [Function],
    "appendClause": [Function],
    "enterNode": [Function],
    "exitNode": [Function],
    "getChildren": [Function],
    "orderBy": {
      "accept": [Function],
      "enterNode": [Function],
      "exitNode": [Function],
      "fields": [
        {
          "accept": [Function],
          "direction": {
            "accept": [Function],
            "enterNode": [Function],
            "exitNode": [Function],
            "getChildren": [Function],
            "parent": [Circular],
            "position": [
              19,
              22,
            ],
            "value": "ASC",
          },
          "enterNode": [Function],
          "exitNode": [Function],
          "field": {
            "accept": [Function],
            "enterNode": [Function],
            "exitNode": [Function],
            "getChildren": [Function],
            "parent": [Circular],
            "position": [
              9,
              18,
            ],
            "properties": [],
            "text": "issuetype",
            "value": "issuetype",
          },
          "getChildren": [Function],
          "parent": [Circular],
          "position": [
            9,
            22,
          ],
          "remove": [Function],
          "replace": [Function],
          "setOrderDirection": [Function],
        },
        {
          "accept": [Function],
          "direction": {
            "accept": [Function],
            "enterNode": [Function],
            "exitNode": [Function],
            "getChildren": [Function],
            "parent": [Circular],
            "position": [
              32,
              36,
            ],
            "value": "DESC",
          },
          "enterNode": [Function],
          "exitNode": [Function],
          "field": {
            "accept": [Function],
            "enterNode": [Function],
            "exitNode": [Function],
            "getChildren": [Function],
            "parent": [Circular],
            "position": [
              24,
              31,
            ],
            "properties": [],
            "text": "another",
            "value": "another",
          },
          "getChildren": [Function],
          "parent": [Circular],
          "position": [
            24,
            36,
          ],
          "remove": [Function],
          "replace": [Function],
          "setOrderDirection": [Function],
        },
      ],
      "getChildren": [Function],
      "operator": {
        "accept": [Function],
        "enterNode": [Function],
        "exitNode": [Function],
        "getChildren": [Function],
        "parent": [Circular],
        "position": [
          0,
          8,
        ],
        "value": "ORDER BY",
      },
      "parent": [Circular],
      "position": [
        0,
        36,
      ],
      "prependOrderField": [Function],
      "remove": [Function],
      "removeOrderField": [Function],
      "replace": [Function],
      "replaceOrderField": [Function],
      "setOrderDirection": [Function],
      "type": "order_by",
    },
    "parent": null,
    "position": [
      0,
      36,
    ],
    "prependOrderField": [Function],
    "removeClause": [Function],
    "removeOrderBy": [Function],
    "replaceClause": [Function],
    "replaceOrderBy": [Function],
    "setOrderDirection": [Function],
    "type": "query",
    "where": undefined,
  },
  "represents": "order by issuetype asc, another desc",
}
`;

exports[`Order by 🟩 order by issuetype desc 1`] = `
{
  "errors": [],
  "query": {
    "accept": [Function],
    "appendClause": [Function],
    "enterNode": [Function],
    "exitNode": [Function],
    "getChildren": [Function],
    "orderBy": {
      "accept": [Function],
      "enterNode": [Function],
      "exitNode": [Function],
      "fields": [
        {
          "accept": [Function],
          "direction": {
            "accept": [Function],
            "enterNode": [Function],
            "exitNode": [Function],
            "getChildren": [Function],
            "parent": [Circular],
            "position": [
              19,
              23,
            ],
            "value": "DESC",
          },
          "enterNode": [Function],
          "exitNode": [Function],
          "field": {
            "accept": [Function],
            "enterNode": [Function],
            "exitNode": [Function],
            "getChildren": [Function],
            "parent": [Circular],
            "position": [
              9,
              18,
            ],
            "properties": [],
            "text": "issuetype",
            "value": "issuetype",
          },
          "getChildren": [Function],
          "parent": [Circular],
          "position": [
            9,
            23,
          ],
          "remove": [Function],
          "replace": [Function],
          "setOrderDirection": [Function],
        },
      ],
      "getChildren": [Function],
      "operator": {
        "accept": [Function],
        "enterNode": [Function],
        "exitNode": [Function],
        "getChildren": [Function],
        "parent": [Circular],
        "position": [
          0,
          8,
        ],
        "value": "ORDER BY",
      },
      "parent": [Circular],
      "position": [
        0,
        23,
      ],
      "prependOrderField": [Function],
      "remove": [Function],
      "removeOrderField": [Function],
      "replace": [Function],
      "replaceOrderField": [Function],
      "setOrderDirection": [Function],
      "type": "order_by",
    },
    "parent": null,
    "position": [
      0,
      23,
    ],
    "prependOrderField": [Function],
    "removeClause": [Function],
    "removeOrderBy": [Function],
    "replaceClause": [Function],
    "replaceOrderBy": [Function],
    "setOrderDirection": [Function],
    "type": "query",
    "where": undefined,
  },
  "represents": "order by issuetype desc",
}
`;

exports[`Order by 🟩 order by issuetype, another 1`] = `
{
  "errors": [],
  "query": {
    "accept": [Function],
    "appendClause": [Function],
    "enterNode": [Function],
    "exitNode": [Function],
    "getChildren": [Function],
    "orderBy": {
      "accept": [Function],
      "enterNode": [Function],
      "exitNode": [Function],
      "fields": [
        {
          "accept": [Function],
          "direction": undefined,
          "enterNode": [Function],
          "exitNode": [Function],
          "field": {
            "accept": [Function],
            "enterNode": [Function],
            "exitNode": [Function],
            "getChildren": [Function],
            "parent": [Circular],
            "position": [
              9,
              18,
            ],
            "properties": [],
            "text": "issuetype",
            "value": "issuetype",
          },
          "getChildren": [Function],
          "parent": [Circular],
          "position": [
            9,
            18,
          ],
          "remove": [Function],
          "replace": [Function],
          "setOrderDirection": [Function],
        },
        {
          "accept": [Function],
          "direction": undefined,
          "enterNode": [Function],
          "exitNode": [Function],
          "field": {
            "accept": [Function],
            "enterNode": [Function],
            "exitNode": [Function],
            "getChildren": [Function],
            "parent": [Circular],
            "position": [
              20,
              27,
            ],
            "properties": [],
            "text": "another",
            "value": "another",
          },
          "getChildren": [Function],
          "parent": [Circular],
          "position": [
            20,
            27,
          ],
          "remove": [Function],
          "replace": [Function],
          "setOrderDirection": [Function],
        },
      ],
      "getChildren": [Function],
      "operator": {
        "accept": [Function],
        "enterNode": [Function],
        "exitNode": [Function],
        "getChildren": [Function],
        "parent": [Circular],
        "position": [
          0,
          8,
        ],
        "value": "ORDER BY",
      },
      "parent": [Circular],
      "position": [
        0,
        27,
      ],
      "prependOrderField": [Function],
      "remove": [Function],
      "removeOrderField": [Function],
      "replace": [Function],
      "replaceOrderField": [Function],
      "setOrderDirection": [Function],
      "type": "order_by",
    },
    "parent": null,
    "position": [
      0,
      27,
    ],
    "prependOrderField": [Function],
    "removeClause": [Function],
    "removeOrderBy": [Function],
    "replaceClause": [Function],
    "replaceOrderBy": [Function],
    "setOrderDirection": [Function],
    "type": "query",
    "where": undefined,
  },
  "represents": "order by issuetype, another",
}
`;

exports[`Order by 🟩 order by issuetype, another asc 1`] = `
{
  "errors": [],
  "query": {
    "accept": [Function],
    "appendClause": [Function],
    "enterNode": [Function],
    "exitNode": [Function],
    "getChildren": [Function],
    "orderBy": {
      "accept": [Function],
      "enterNode": [Function],
      "exitNode": [Function],
      "fields": [
        {
          "accept": [Function],
          "direction": undefined,
          "enterNode": [Function],
          "exitNode": [Function],
          "field": {
            "accept": [Function],
            "enterNode": [Function],
            "exitNode": [Function],
            "getChildren": [Function],
            "parent": [Circular],
            "position": [
              9,
              18,
            ],
            "properties": [],
            "text": "issuetype",
            "value": "issuetype",
          },
          "getChildren": [Function],
          "parent": [Circular],
          "position": [
            9,
            18,
          ],
          "remove": [Function],
          "replace": [Function],
          "setOrderDirection": [Function],
        },
        {
          "accept": [Function],
          "direction": {
            "accept": [Function],
            "enterNode": [Function],
            "exitNode": [Function],
            "getChildren": [Function],
            "parent": [Circular],
            "position": [
              28,
              31,
            ],
            "value": "ASC",
          },
          "enterNode": [Function],
          "exitNode": [Function],
          "field": {
            "accept": [Function],
            "enterNode": [Function],
            "exitNode": [Function],
            "getChildren": [Function],
            "parent": [Circular],
            "position": [
              20,
              27,
            ],
            "properties": [],
            "text": "another",
            "value": "another",
          },
          "getChildren": [Function],
          "parent": [Circular],
          "position": [
            20,
            31,
          ],
          "remove": [Function],
          "replace": [Function],
          "setOrderDirection": [Function],
        },
      ],
      "getChildren": [Function],
      "operator": {
        "accept": [Function],
        "enterNode": [Function],
        "exitNode": [Function],
        "getChildren": [Function],
        "parent": [Circular],
        "position": [
          0,
          8,
        ],
        "value": "ORDER BY",
      },
      "parent": [Circular],
      "position": [
        0,
        31,
      ],
      "prependOrderField": [Function],
      "remove": [Function],
      "removeOrderField": [Function],
      "replace": [Function],
      "replaceOrderField": [Function],
      "setOrderDirection": [Function],
      "type": "order_by",
    },
    "parent": null,
    "position": [
      0,
      31,
    ],
    "prependOrderField": [Function],
    "removeClause": [Function],
    "removeOrderBy": [Function],
    "replaceClause": [Function],
    "replaceOrderBy": [Function],
    "setOrderDirection": [Function],
    "type": "query",
    "where": undefined,
  },
  "represents": "order by issuetype, another asc",
}
`;
